--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@digi/arbetsformedlingen-react": "^20.0.5-beta.0",
+    "@digi/arbetsformedlingen-react": "^23.1.0-beta.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "sass": "^1.71.1",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
